prefix-urlrewrite/httproute2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route2
  namespace: ns2
spec:
  hostnames:
  - store.example.com 
  parentRefs:
  - name: external-http
    namespace: nsgw 
  rules:
  - backendRefs:
    - name: frontend
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /bar
    filters:
    - type: URLRewrite 
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
